ta-connector-demo-ext/main/default/objects/Bank_Statement__c/Bank_Statement__c.object-meta.xml
<CustomObject>
    <label>Bank Statement</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Bank Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>