ta-connector-demo-ext/main/default/objects/Bank_Statement__c/fields/Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Name__c</fullName>
    <label>Account Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>