ta-connector-demo-ext/main/default/objects/Bank_Statement__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>