ta-connector-demo-ext/main/default/objects/Bank_Statement__c/fields/Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address__c</fullName>
    <label>Bank Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>