ta-connector-demo-ext/main/default/objects/Bank_Statement__c/fields/Branch_Primary_Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch_Primary_Branch__c</fullName>
    <label>Branch/Primary Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>