ta-connector-demo-ext/main/default/objects/Bank_Statement__c/fields/Statement_Period__c.field-meta.xml
<CustomField>
    <fullName>Statement_Period__c</fullName>
    <label>Statement Period</label>
    <length>200</length>
    <type>Text</type>
</CustomField>